alterada cor dos ícones da home

--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
         <h1 style="font-size: 50px">GCEAD</h1>
         <div class="cardsHome">
             <h2>CONSULTAR ALUNOS</h2>
-            <a href="#"><img src="imgs/home/alunos.png" alt="alunos" width="250px"></a>
+            <a href="#"><img src="imgs/home/alunosAzul.png" alt="alunos" width="250px"></a>
         </div>
         <div class="cardsHome">
             <h2>CONSULTAR BOLETOS</h2>
-            <a href="#"><img src="imgs/home/boletos.png" alt="boletos" width="250px"></a>
+            <a href="#"><img src="imgs/home/boletosAzul.png" alt="boletos" width="250px"></a>
         </div>
     </div>
     <div style="position: relative;">
         <div class="cardsHome" style="width: 600px">
             <h2>GERENCIAR FUNCIONÁRIOS</h2>
-            <a href="#"><img src="imgs/home/funcionarios.png" alt="alunos" width="250px"></a>
+            <a href="#"><img src="imgs/home/funcionariosAzul.png" alt="alunos" width="250px"></a>
         </div>
     </div>
 </body>
