adicionada página de login

--- a/index.html
+++ b/index.html
@@ -3,50 +3,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GCEAD</title>
+    <title>Login</title>
     <link rel="stylesheet" href="css/style.css">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Montserrat&display=swap" rel="stylesheet">
-
 </head>
-<header>
-
-    <nav>
-        <ul>
-            <li style="float: left;margin-left: 5px;"><b>HOME</b></li>
-            <li><a href="#">Alunos</a></li>
-            <li><a href="#">Boletos</a></li>
-            <li><a href="#">Funcionários</a></li>
-            <li style="float: right;margin-right: 5px;"><b>SAIR</b></li>
-        </ul>
-    </nav>
-</header>
-
 <body>
-    <div style="position: relative;padding-top: 10px;">
-        <h1 style="font-size: 50px">GCEAD</h1>
-        <div class="cardsHome">
-            <h2>CONSULTAR ALUNOS</h2>
-            <a href="#"><img src="imgs/home/alunosAzul.png" alt="alunos" width="250px"></a>
-        </div>
-        <div class="cardsHome">
-            <h2>CONSULTAR BOLETOS</h2>
-            <a href="#"><img src="imgs/home/boletosAzul.png" alt="boletos" width="250px"></a>
-        </div>
-    </div>
-    <div style="position: relative;">
-        <div class="cardsHome" style="width: 600px">
-            <h2>GERENCIAR FUNCIONÁRIOS</h2>
-            <a href="#"><img src="imgs/home/funcionariosAzul.png" alt="alunos" width="250px"></a>
-        </div>
+    <div class="divLogin">
+        <h1>LOGIN</h1>
+        <form action="pages/home.html" method="POST">
+            <p><label for="usuario">Usuário:</label><br>
+            <input type="text" name="usuario" id="usuario" required autocomplete="off"></p>
+
+            <p><label for="senha">Senha:</label><br>
+            <input type="password" name="senha" id="senha" required autocomplete="off"></p>
+
+            <p><input type="submit" value="Entrar"></p>
+        </form>
+        <a href="#">Esqueci minha senha</a>
     </div>
 </body>
-
-<footer>
-    <h1>GCEAD</h1>
-    <h2>2022</h2>
-</footer>
-
 </html>
