adicionada tela de consulta de alunos

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
                 <p><label for="senha">Senha:</label><br>
                 <input type="password" name="senha" id="senha" required autocomplete="off"></p>
                 
+                <p><p>Selecione o polo</p></p>
+                    <select name="polo">
+                    <option name="polo">Av. Paulista</option>
+                    <option name="polo">Consolata - Santana</option>
+                    <option name="polo">Campinas</option>
+                </select></p>
+
                 <p><input type="submit" value="Entrar"></p>
             </form>
             <a href="#">Esqueci minha senha</a>
