--- a/pages/home.html
+++ b/pages/home.html
@@ -15,8 +15,8 @@
 
     <nav>
         <ul>
-            <li style="float: left;margin-left: 5px;"><b>HOME</b></li>
-            <li><a href="#">Alunos</a></li>
+            <li style="float: left;margin-left: 5px;"><a href="home.html">HOME</a></li>
+            <li><a href="alunos.html">Alunos</a></li>
             <li><a href="#">Boletos</a></li>
             <li><a href="#">Funcionários</a></li>
             <li style="float: right;margin-right: 5px;"><a href="../index.html">SAIR</a></li>
@@ -29,7 +29,7 @@
         <h1 style="font-size: 50px">GCEAD</h1>
         <div class="cardsHome">
             <h2>CONSULTAR ALUNOS</h2>
-            <a href="#"><img src="../imgs/home/alunosAzul.png" alt="alunos" width="250px"></a>
+            <a href="alunos.html"><img src="../imgs/home/alunosAzul.png" alt="alunos" width="250px"></a>
         </div>
         <div class="cardsHome">
             <h2>CONSULTAR BOLETOS</h2>
