customizada tela de consulta de alunos

--- a/pages/alunos.html
+++ b/pages/alunos.html
@@ -24,12 +24,29 @@
 <body>
     <div>
         <table id="listaAlunos">
-            <h1 style="margin-top: 50px">Consulta geral de alunos</h1>
+            <div><a href=""><img id="botaoAdd" src="../imgs/alunos/addAluno.png" alt="" width="100px"></a></div>
+            <h1>Consulta geral de alunos</h1>
 
             <tr><th>ALUNOS</th></tr>
-            <tr><td>Nome:</td>
-                <td>Data de nascimento:</td>
-                <td>RM:</td></tr>
+            <tr><th>Nome:</th>
+                <th>Data de nascimento:</th>
+                <th>RM:</th></tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td><a href=""><img src="../imgs/alunos/consultar.png" alt="" width="25px"></a></td>
+                <td><a href=""><img src="../imgs/alunos/editar.png" alt="" width="25px"></a></td>
+                <td><a href=""><img src="../imgs/alunos/deletar.png" alt="" width="25px"></a></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td><a href=""><img src="../imgs/alunos/consultar.png" alt="" width="25px"></a></td>
+                <td><a href=""><img src="../imgs/alunos/editar.png" alt="" width="25px"></a></td>
+                <td><a href=""><img src="../imgs/alunos/deletar.png" alt="" width="25px"></a></td>
+            </tr>
             <tr>
                 <td></td>
                 <td></td>
