adicionada tela de consulta de funcionários

--- a/pages/funcionarios.html
+++ b/pages/funcionarios.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Consulta de Alunos</title>
+    <title>Consulta de Funcionários</title>
     <link rel="stylesheet" href="../css/style.css">
     
 </head>
@@ -25,12 +25,12 @@
     <div>
         <table id="listaAlunos">
             <div><a href=""><img id="botaoAdd" src="../imgs/alunos/addAluno.png" alt="" width="100px"></a></div>
-            <h1>Consulta geral de alunos</h1>
+            <h1>Consulta geral de funcionários</h1>
 
-            <tr><th>ALUNOS</th></tr>
+            <tr><th>FUNCIONÁRIOS</th></tr>
             <tr><th>Nome:</th>
                 <th>Data de nascimento:</th>
-                <th>RM:</th></tr>
+                <th>Cargo:</th></tr>
             <tr>
                 <td></td>
                 <td></td>
