--- a/pages/home.html
+++ b/pages/home.html
@@ -18,7 +18,7 @@
             <li style="float: left;margin-left: 5px;"><a href="home.html">HOME</a></li>
             <li><a href="alunos.html">Alunos</a></li>
             <li><a href="#">Boletos</a></li>
-            <li><a href="#">Funcionários</a></li>
+            <li><a href="funcionarios.html">Funcionários</a></li>
             <li style="float: right;margin-right: 5px;"><a href="../index.html">SAIR</a></li>
         </ul>
     </nav>
@@ -39,7 +39,7 @@
     <div style="position: relative;">
         <div class="cardsHome" style="width: 600px">
             <h2>GERENCIAR FUNCIONÁRIOS</h2>
-            <a href="#"><img src="../imgs/home/funcionariosAzul.png" alt="alunos" width="250px"></a>
+            <a href="funcionarios.html"><img src="../imgs/home/funcionariosAzul.png" alt="alunos" width="250px"></a>
         </div>
     </div>
 </body>
