custmizado botão select da tela login + alterada fonte
	customizado botão select da tela login + alterada

	customizado botão select da tela login + fonte alterada

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <p><label for="senha">Senha:</label><br>
                 <input type="password" name="senha" id="senha" required autocomplete="off"></p>
                 
-                <p><p>Selecione o polo</p></p>
+                <p>Selecione o polo</p>
                     <select name="polo">
                     <option name="polo">Av. Paulista</option>
                     <option name="polo">Consolata - Santana</option>
