Bootstrap na tela de login + alteração nas cores das páginas

--- a/pages/alunos.html
+++ b/pages/alunos.html
@@ -16,11 +16,11 @@
 
     <nav>
         <ul>
-            <li style="float: left;margin-left: 5px;"><a href="home.html">HOME</a></li>
+            <li style="float: left;margin-left: 5px;"><a href="home.html">Home</a></li>
             <li><a href="alunos.html">Alunos</a></li>
             <li><a href="#">Boletos</a></li>
             <li><a href="funcionarios.html">Funcionários</a></li>
-            <li style="float: right;margin-right: 5px;"><a href="../index.html">SAIR</a></li>
+            <li style="float: right;margin-right: 5px;"><a href="../index.html">Sair</a></li>
         </ul>
     </nav>
 </header>
@@ -28,10 +28,9 @@
 <body>
     <div>
         <table id="listaAlunos">
-            <div><a href=""><img id="botaoAdd" src="../imgs/alunos/addAluno.png" alt="" width="100px"></a></div>
+            <div><a href=""><img id="botaoAdd" src="../imgs/alunos/addAlunoIcon.png" alt="" width="100px"></a></div>
             <h1>Consulta geral de alunos</h1>
 
-            <tr><th>ALUNOS</th></tr>
             <tr><th>Nome:</th>
                 <th>Data de nascimento:</th>
                 <th>RM:</th></tr>
@@ -64,8 +63,8 @@
 </body>
 
 <footer>
-    <h1>GCEAD</h1>
-    <h2>2022</h2>
+    <p>GCEAD</p>
+    <p>2022</p>
 </footer>
 
 </html>
