--- a/pages/home.html
+++ b/pages/home.html
@@ -15,38 +15,38 @@
 
     <nav>
         <ul>
-            <li style="float: left;margin-left: 5px;"><a href="home.html">HOME</a></li>
+            <li style="float: left;margin-left: 5px;"><a href="home.html">Home</a></li>
             <li><a href="alunos.html">Alunos</a></li>
             <li><a href="#">Boletos</a></li>
             <li><a href="funcionarios.html">Funcionários</a></li>
-            <li style="float: right;margin-right: 5px;"><a href="../index.html">SAIR</a></li>
+            <li style="float: right;margin-right: 5px;"><a href="../index.html">Sair</a></li>
         </ul>
     </nav>
 </header>
 
 <body>
-    <div style="position: relative;padding-top: 10px;">
-        <h1 style="font-size: 50px">GCEAD</h1>
+    <div style="position: relative; padding-top: 10px;">
+        <h1 style="font-size: 50px; color: #0478D9;">GCEAD</h1>
         <div class="cardsHome">
-            <h2>CONSULTAR ALUNOS</h2>
-            <a href="alunos.html"><img src="../imgs/home/alunosAzul.png" alt="alunos" width="250px"></a>
+            <h2>Consultar alunos</h2>
+            <a href="alunos.html"><img src="../imgs/home/alunosIcon.png" alt="alunos" width="250px"></a>
         </div>
         <div class="cardsHome">
-            <h2>CONSULTAR BOLETOS</h2>
-            <a href="#"><img src="../imgs/home/boletosAzul.png" alt="boletos" width="250px"></a>
+            <h2>Consultar boletos</h2>
+            <a href="#"><img src="../imgs/home/boletosIcon.png" alt="boletos" width="250px"></a>
         </div>
     </div>
-    <div style="position: relative;">
+    <div style="position: relative; padding-bottom: 50px;">
         <div class="cardsHome" style="width: 600px">
-            <h2>GERENCIAR FUNCIONÁRIOS</h2>
-            <a href="funcionarios.html"><img src="../imgs/home/funcionariosAzul.png" alt="alunos" width="250px"></a>
+            <h2>Gerenciar funcionários</h2>
+            <a href="funcionarios.html"><img src="../imgs/home/funcionariosIcon.png" alt="alunos" width="250px"></a>
         </div>
     </div>
 </body>
 
 <footer>
-    <h1>GCEAD</h1>
-    <h2>2022</h2>
+    <p>GCEAD</p>
+    <p>2022</p>
 </footer>
 
 </html>
