Adicionada tela de seleção do polo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="row">
               <div class="col">
                     <h1>Login</h1>
-                    <form action="pages/home.html" method="POST">
+                    <form action="pages/polos.html" method="POST">
                         <p><label for="usuario">Usuário:</label><br>
                         <input class="inputLogin" type="text" name="usuario" id="usuario" required autocomplete="off"></p>
                         
