--- a/pages/funcionarios.html
+++ b/pages/funcionarios.html
@@ -6,6 +6,8 @@
     <title>Consulta de Funcionários</title>
     <link rel="stylesheet" href="../css/style.css">
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Montserrat&display=swap" rel="stylesheet">
@@ -14,15 +16,39 @@
 
 <header>
 
-    <nav>
-        <ul>
-            <li style="float: left;margin-left: 5px;"><a href="home.html">Home</a></li>
-            <li><a href="alunos.html">Alunos</a></li>
-            <li><a href="#">Boletos</a></li>
-            <li><a href="funcionarios.html">Funcionários</a></li>
-            <li style="float: right;margin-right: 5px;"><a href="../index.html">Sair</a></li>
-        </ul>
-    </nav>
+    <nav class="barraNav navbar navbar-expand-lg bg-light" class="">
+        <div class="container-fluid">
+          <a class="nav-link" href="home.html">Home</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="alunos.html">Alunos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="funcionarios.html">Funcionários</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="polos.html">Polos</a>
+              </li>
+            </ul>
+            <div class="d-flex">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      <img src="../imgs/conta/account.png" width="40px" alt="">
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end">
+                      <li><a class="dropdown-item" href="#" style="color: #0478D9;">Ver Perfil</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="#" style="color: #0478D9;">Sair</a></li>
+                    </ul>
+                  </li>
+                </div>
+          </div>
+        </div>
+      </nav>
 </header>
 
 <body>
@@ -62,9 +88,10 @@
     </div>
 </body>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+
 <footer>
-    <p>GCEAD</p>
-    <p>2022</p>
+    GCEAD<br>2022
 </footer>
 
 </html>
