Bootstrap grid nos cards da tela home

--- a/pages/alunos.html
+++ b/pages/alunos.html
@@ -16,8 +16,7 @@
 </head>
 
 <header>
-
-    <nav class="barraNav navbar navbar-expand-lg bg-light" class="">
+    <nav class="barraNav navbar navbar-expand-lg" style="position: fixed;z-index: 1000;width: 100%;">
         <div class="container-fluid">
           <a class="nav-link" href="home.html">Home</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
