--- a/pages/polos.html
+++ b/pages/polos.html
@@ -8,39 +8,41 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 
-<nav class="barraNav navbar navbar-expand-lg bg-light" class="">
-    <div class="container-fluid">
-      <a class="nav-link" href="home.html">Home</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="alunos.html">Alunos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="funcionarios.html">Funcionários</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="polos.html">Polos</a>
-          </li>
-        </ul>
-        <div class="d-flex">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  <img src="../imgs/conta/account.png" width="40px" alt="">
-                </a>
-                <ul class="dropdown-menu dropdown-menu-end">
-                  <li><a class="dropdown-item" href="#" style="color: #0478D9;">Ver Perfil</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#" style="color: #0478D9;">Sair</a></li>
-                </ul>
+<header>
+    <nav class="barraNav navbar navbar-expand-lg" style="position: fixed;z-index: 1000;width: 100%;">
+        <div class="container-fluid">
+          <a class="nav-link" href="home.html">Home</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="alunos.html">Alunos</a>
               </li>
-            </div>
-      </div>
-    </div>
-  </nav>
+              <li class="nav-item">
+                <a class="nav-link" href="funcionarios.html">Funcionários</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="polos.html">Polos</a>
+              </li>
+            </ul>
+            <div class="d-flex">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      <img src="../imgs/conta/account.png" width="40px" alt="">
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end">
+                      <li><a class="dropdown-item" href="#" style="color: #0478D9;">Ver Perfil</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="#" style="color: #0478D9;">Sair</a></li>
+                    </ul>
+                  </li>
+                </div>
+          </div>
+        </div>
+      </nav>
+</header>
 
 <body>
     <div id="divPolos">
