--- a/pages/home.html
+++ b/pages/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GCEAD</title>
     <link rel="stylesheet" href="../css/style.css">
-
+    <link rel="shortcut icon" href="../imgs/favicon.jpg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -39,9 +39,9 @@
                       <img src="../imgs/conta/account.png" width="40px" alt="">
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end">
-                      <li><a class="dropdown-item" href="#" style="color: #0478D9;">Ver Perfil</a></li>
+                      <li><a class="dropdown-item" href="#">Ver Perfil</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#" style="color: #0478D9;">Sair</a></li>
+                      <li><a class="dropdown-item" href="../index.html">Sair</a></li>
                     </ul>
                   </li>
                 </div>
