Correções na tela de seleção de polo

--- a/pages/polos.html
+++ b/pages/polos.html
@@ -46,40 +46,40 @@
 </header>
 
 <body>
-    <div id="divPolos">
-        <div class="container text-center">
-            <div class="row">
-                <h1>POLOS</h1>
-              <div class="col">
-                <div class="card" style="width: 18rem;">
-                    <img src="../imgs/polos/ceadPaulista.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Polo Av. Paulista</h5>
-                        <a href="home.html" class="btn btn-primary">Acessar</a>
-                    </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="card" style="width: 18rem;">
-                    <img src="../imgs/polos/ceadPaulista.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Polo Av. Paulista</h5>
-                        <a href="home.html" class="btn btn-primary">Acessar</a>
-                    </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="card" style="width: 18rem;">
-                    <img src="../imgs/polos/ceadPaulista.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Polo Av. Paulista</h5>
-                        <a href="home.html" class="btn btn-primary">Acessar</a>
-                    </div>
+    <div style="padding-top: 150px;padding-bottom: 50px;">
+      <div class="container text-center">
+        <h1>Polos</h1>
+          <div class="row row-cols-3 g-0">
+            <div class="col" style="padding-left: 10px; padding-right: 10px;">
+              <div class="card">
+                <img src="../imgs/polos/ceadPaulista.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Polo Av. Paulista</h5>
+                    <a href="home.html" class="btn btn-outline-primary">Acessar</a>
                 </div>
               </div>
             </div>
+            <div class="col" style="padding-left: 10px; padding-right: 10px;">
+              <div class="card">
+                <img src="../imgs/polos/ceadPaulista.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Polo Av. Paulista</h5>
+                    <a href="home.html" class="btn btn-outline-primary">Acessar</a>
+                </div>
+              </div>
+            </div>
+            <div class="col" style="padding-left: 10px; padding-right: 10px;">
+              <div class="card">
+                <img src="../imgs/polos/ceadPaulista.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Polo Av. Paulista</h5>
+                    <a href="home.html" class="btn btn-outline-primary">Acessar</a>
+                </div>
+            </div>
+            </div>
+          </div>
         </div>
-            
+      </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
