Tela de consulta de funcionários remodelada

--- a/pages/alunos.html
+++ b/pages/alunos.html
@@ -55,7 +55,7 @@
   <div class="container" style="padding-top: 100px;padding-bottom: 50px; text-align:center">
 
     <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal"
-    data-bs-target="#addAluno" style="font-size: 1.2em; width: 200px;">Adicionar Aluno
+    data-bs-target="#addAluno" style="font-size: 1.0em; width: 200px;">Adicionar Aluno<br>
     <img src="../imgs/alunos/addAlunoIcon.png" alt="add aluno" width="50px">
     </button>
 
