--- a/pages/funcionarios.html
+++ b/pages/funcionarios.html
@@ -51,40 +51,49 @@
 </header>
 
 <body>
-    <div>
-        <table id="listaAlunos">
-            <div><a href=""><img id="botaoAdd" src="../imgs/alunos/addAlunoIcon.png" alt="" width="100px"></a></div>
-            <h1>Consulta geral de funcionários</h1>
+  <div class="container" style="padding-top: 100px;padding-bottom: 50px; text-align:center">
 
-            <tr><th>Nome:</th>
-                <th>Data de nascimento:</th>
-                <th>Cargo:</th></tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td><a href=""><img src="../imgs/alunos/consultar.png" alt="" width="25px"></a></td>
-                <td><a href=""><img src="../imgs/alunos/editar.png" alt="" width="25px"></a></td>
-                <td><a href=""><img src="../imgs/alunos/deletar.png" alt="" width="25px"></a></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td><a href=""><img src="../imgs/alunos/consultar.png" alt="" width="25px"></a></td>
-                <td><a href=""><img src="../imgs/alunos/editar.png" alt="" width="25px"></a></td>
-                <td><a href=""><img src="../imgs/alunos/deletar.png" alt="" width="25px"></a></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td><a href=""><img src="../imgs/alunos/consultar.png" alt="" width="25px"></a></td>
-                <td><a href=""><img src="../imgs/alunos/editar.png" alt="" width="25px"></a></td>
-                <td><a href=""><img src="../imgs/alunos/deletar.png" alt="" width="25px"></a></td>
-            </tr>
-        </table>
+    <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal"
+    data-bs-target="#addAluno" style="font-size: 1.0em; width: 200px;">Adicionar Funcionário
+    <img src="../imgs/alunos/addAlunoIcon.png" alt="add aluno" width="50px">
+    </button>
+
+    <div class="overflow-auto">
+      <div class="column">  
+        <div class="m-2 ">
+          <table class="table" style="color:#0478D9">
+            <thead style="text-align: center;">
+              <th scope="col" style='text-align:center'>Nome</th>
+              <th scope="col" style='text-align:center'>Cargo</th>
+              <th scope="col" style='text-align:center'>Data de Nascimento</th>
+              <th scope="col">Ações</th>
+            </thead>
+            <tbody style="text-align: center;">
+              <tr>
+                <td><span>Marta</span></td> 
+                <td><span>Funcionário</span></td>
+                <td><span>08/08/1808</span></td>
+                <td>
+                  <button class='btn btn-sm btn-outline-primary editAluno' value="<?php echo $row['id_aluno']; ?>">
+                    <svg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-clipboard' viewBox='0 0 16 16'>
+                      <path d='M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z' />
+                      <path d='M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z' />
+                    </svg>
+                  </button>
+                  <button class='btn btn-sm btn-outline-danger deleteAluno' value="<?php echo $row['id_aluno']; ?>">
+                    <svg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-trash' viewBox='0 0 16 16'>
+                      <path d='M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z' />
+                      <path fill-rule='evenodd' d='M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z' />
+                    </svg>
+                  </button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
     </div>
+  </div>
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
