--- a/pages/funcionarios.html
+++ b/pages/funcionarios.html
@@ -51,10 +51,68 @@
 </header>
 
 <body>
+  <!-- modal de cadastro do funcionario -->
+  <div class="modal fade" id="addFuncionario" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+            <div class="container" style="text-align:center">
+                <h5 class="modal-title" style="color: #0478D9;">Cadastrar uma Conta para Funcionário
+                </h5>
+            </div>
+        </div>
+        <div class="modal-body">
+            <form method="POST" action="../../crud/criarConta/controleConta.php" autocomplete="off"
+                enctype="multipart/form-data">
+                <div class="form-floating mb-3 mt-3">
+                    <input type="text" class="form-control inputGeral"
+                        placeholder="Digite o seu Usuario" required name="nome">
+                    <label class="labelCadastro">Digite o Nome de Usuario</label>
+                </div>
+                <div class="form-floating mt-3 mb-3">
+                    <input type="email" class="form-control inputGeral"
+                        placeholder="Digite o seu Email" name='email' required>
+                    <label class="labelCadastro">Digite o Email</label>
+                </div>
+                <div class="form-floating mt-3 mb-3">
+                    <input type="password" class="form-control inputGeral"
+                        placeholder="Digite a sua Senha" name='senha' required>
+                    <label class="labelCadastro">Digite a Senha</label>
+                </div>
+                <div class="form-floating mt-3 mb-3">
+                    <input type="password" class="form-control inputGeral"
+                        placeholder="Repita a sua Senha" name='confirmarSenha' required>
+                    <label class="labelCadastro">Repita a Senha</label>
+                </div>
+                <div class="mt-3 mb-3">
+                    <label for="arquivo" class="form-control" id="labelArquivo">Escolha
+                        uma Foto de Perfil</label>
+                    <input type="file" class="form-control" name="foto" id="arquivo">
+                </div>
+                <div style="margin-bottom:15px">
+                    <select class="form-select labelCadastro" name="tipo">
+                        <option value="F" name="tipo" class="labelCadastro">
+                            Funcionário</option>
+                        <option value="A" name="tipo" class="labelCadastro">
+                            Administrador</option>
+                    </select>
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-outline-danger btn-lg btn-block"
+                        style="font-size:16px"
+                        onclick="window.location.href='funcionarios.php'">Voltar</button>
+                    <button type="submit" class="btn btn-outline-primary btn-lg btn-block"
+                        style="font-size:16px" value="cadastrar" name="botao">Cadastrar</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="container" style="padding-top: 100px;padding-bottom: 50px; text-align:center">
 
     <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal"
-    data-bs-target="#addAluno" style="font-size: 1.0em; width: 200px;">Adicionar Funcionário
+    data-bs-target="#addFuncionario" style="font-size: 1.0em; width: 200px;">Adicionar Funcionário
     <img src="../imgs/alunos/addAlunoIcon.png" alt="add aluno" width="50px">
     </button>
 
