--- a/pages/polos.html
+++ b/pages/polos.html
@@ -46,10 +46,9 @@
 </header>
 
 <body>
-    <div style="padding-top: 150px;padding-bottom: 50px;">
+    <div id="divPolos">
       <div class="container text-center">
-        <h1>Polos</h1>
-          <div class="row row-cols-3 g-0">
+          <div class="row row-cols-3">
             <div class="col" style="padding-left: 10px; padding-right: 10px;">
               <div class="card">
                 <img src="../imgs/polos/ceadPaulista.jpg" class="card-img-top" alt="...">
@@ -75,7 +74,7 @@
                     <h5 class="card-title">Polo Av. Paulista</h5>
                     <a href="home.html" class="btn btn-outline-primary">Acessar</a>
                 </div>
-            </div>
+              </div>
             </div>
           </div>
         </div>
