--- a/pages/funcionarios.html
+++ b/pages/funcionarios.html
@@ -109,6 +109,7 @@
       </div>
     </div>
   </div>
+  <!-- modal de cadastro do funcionario -->
   <div class="container" style="padding-top: 100px;padding-bottom: 50px; text-align:center">
 
     <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal"
