Adicionada modal de adição de mensalidades

--- a/pages/funcionarios.html
+++ b/pages/funcionarios.html
@@ -100,7 +100,7 @@
                 <div class="modal-footer">
                     <button type="submit" class="btn btn-outline-danger btn-lg btn-block"
                         style="font-size:16px"
-                        onclick="window.location.href='funcionarios.php'">Voltar</button>
+                        onclick="window.location.href='funcionarios.html'">Voltar</button>
                     <button type="submit" class="btn btn-outline-primary btn-lg btn-block"
                         style="font-size:16px" value="cadastrar" name="botao">Cadastrar</button>
             </form>
