--- a/pages/alunos.html
+++ b/pages/alunos.html
@@ -52,7 +52,7 @@
 </header>
 
 <body>
-  <!-- modal de cadastro do funcionario -->
+  <!-- modal de cadastro de aluno -->
   <div class="modal fade" id="addAluno" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -63,7 +63,7 @@
             </div>
         </div>
         <div class="modal-body">
-            <form method="POST" action="../../crud/criarConta/controleConta.php" autocomplete="off"
+            <form method="POST" action="" autocomplete="off"
                 enctype="multipart/form-data">
                 <div class="form-floating mb-3 mt-3">
                     <input type="text" class="form-control inputGeral"
@@ -80,10 +80,15 @@
                         placeholder="RA" name='ra' required>
                     <label class="labelCadastro">RA</label>
                 </div>
+                <div class="form-floating mt-3 mb-3">
+                  <input type="date" class="form-control inputGeral"
+                      placeholder="Data de Nascimento" name='dataNascimento' required>
+                  <label class="labelCadastro">Data de Nascimento</label>
+                </div>
                 <div class="modal-footer">
                     <button type="submit" class="btn btn-outline-danger btn-lg btn-block"
                         style="font-size:16px"
-                        onclick="window.location.href='funcionarios.php'">Voltar</button>
+                        onclick="window.location.href='alunos.html'">Voltar</button>
                     <button type="submit" class="btn btn-outline-primary btn-lg btn-block"
                         style="font-size:16px" value="cadastrar" name="botao">Cadastrar</button>
             </form>
@@ -92,7 +97,50 @@
       </div>
     </div>
   </div>
-  <!-- modal de cadastro do funcionario -->
+  <!-- modal de cadastro de aluno -->
+
+  <!-- modal de cadastro de boleto -->
+  <div class="modal fade" id="addBoleto" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+            <div class="container" style="text-align:center">
+                <h5 class="modal-title" style="color: #0478D9;">Adicionar uma Mensalidade
+                </h5>
+            </div>
+        </div>
+        <div class="modal-body">
+            <form method="POST" action="" autocomplete="off"
+                enctype="multipart/form-data">
+                <div class="form-floating mb-3 mt-3">
+                    <input type="text" class="form-control inputGeral"
+                        placeholder="Nome do Aluno" required name="nome">
+                    <label class="labelCadastro">Nome do Aluno</label>
+                </div>
+                <div class="form-floating mt-3 mb-3">
+                    <input type="date" class="form-control inputGeral"
+                        placeholder="Vencimento" name='vecimento' required>
+                    <label class="labelCadastro">Vencimento</label>
+                </div>
+                <div class="form-floating mt-3 mb-3">
+                    <input type="number" class="form-control inputGeral"
+                        placeholder="Valor" name='valor' required>
+                    <label class="labelCadastro">Valor</label>
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-outline-danger btn-lg btn-block"
+                        style="font-size:16px"
+                        onclick="window.location.href='alunos.html'">Voltar</button>
+                    <button type="submit" class="btn btn-outline-primary btn-lg btn-block"
+                        style="font-size:16px" value="cadastrar" name="botao">Adicionar</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- modal de cadastro de boleto -->
+
   <div class="container" style="padding-top: 100px;padding-bottom: 50px; text-align:center">
 
     <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal"
@@ -106,16 +154,24 @@
           <table class="table" style="color:#0478D9">
             <thead style="text-align: center;">
               <th scope="col" style='text-align:center'>Nome</th>
+              <th scope="col" style='text-align:center'>E-Mail</th>
               <th scope="col" style='text-align:center'>RA</th>
               <th scope="col" style='text-align:center'>Data de Nascimento</th>
               <th scope="col">Ações</th>
             </thead>
             <tbody style="text-align: center;">
               <tr>
-                <td><span>Jorge</span></td> 
+                <td><span>Jorge</span></td>
+                <td><span>joorgee@gmail.com</span></td>
                 <td><span>099939291</span></td>
                 <td><span>09/09/1909</span></td>
                 <td>
+                  <button class='btn btn-sm btn-outline-warning addBoleto' value="<?php echo $row['id_aluno']; ?>" data-bs-toggle="modal" data-bs-target="#addBoleto">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-plus" viewBox="0 0 16 16">
+                      <path d="M8 6.5a.5.5 0 0 1 .5.5v1.5H10a.5.5 0 0 1 0 1H8.5V11a.5.5 0 0 1-1 0V9.5H6a.5.5 0 0 1 0-1h1.5V7a.5.5 0 0 1 .5-.5z"/>
+                      <path d="M14 4.5V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h5.5L14 4.5zm-3 0A1.5 1.5 0 0 1 9.5 3V1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4.5h-2z"/>
+                    </svg>
+                  </button>
                   <button class='btn btn-sm btn-outline-primary editAluno' value="<?php echo $row['id_aluno']; ?>">
                     <svg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-clipboard' viewBox='0 0 16 16'>
                       <path d='M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z' />
