--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 <body style="background-color: whitesmoke;">
-    <div class="container text-center" id="divLogin">
+    <div class="container text-center divLogin">
         <div class="row">
             <div class="col">
                 <h1>Login</h1><br>
@@ -23,7 +23,7 @@
                         
                     <p><button type="submit" class="btn btn-outline-primary mb-3">Entrar</button></p>
                 </form>
-                <a href="#">Esqueci minha senha</a>
+                <a href="pages/esqueciSenha.html">Esqueci minha senha</a>
             </div>
             <div class="col">
                 <div>
