--- a/pages/polos.html
+++ b/pages/polos.html
@@ -10,39 +10,38 @@
 </head>
 
 <header>
-    <nav class="barraNav navbar navbar-expand-lg" style="position: fixed;z-index: 1000;width: 100%;">
-        <div class="container-fluid">
-          <a class="nav-link" href="home.html">Home</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <li class="nav-item">
-                  <a class="nav-link" href="polos.html">Polos</a>
-                </li>
-                <a class="nav-link" href="alunos.html">Alunos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="funcionarios.html">Funcionários</a>
-              </li>
-            </ul>
-            <div class="d-flex">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      <img src="../imgs/conta/account.png" width="40px" alt="">
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-end">
-                      <li><a class="dropdown-item" href="#" style="color: #0478D9;">Ver Perfil</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="../index.html" style="color: #0478D9;">Sair</a></li>
-                    </ul>
-                  </li>
-                </div>
-          </div>
-        </div>
-      </nav>
+  <nav class="navbar navbar-expand-lg bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="home.html">Home</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="polos.html">Polos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="alunos.html">Alunos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="funcionarios.html">Funcionários</a>
+          </li>
+        </ul>
+      </div>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <img src="../imgs/conta/account.png" alt="perfil" width="30px">
+          </a>
+          <ul class="dropdown-menu dropdown-menu-end">
+            <li><a class="dropdown-item" href="#">Ver perfil</a></li>
+            <li><a class="dropdown-item" href="../index.html">Sair</a></li>
+          </ul>
+        </li>
+      </div>
+    </div>
+  </nav>
 </header>
 
 <body>
