Reestruturação da tela home + ajustes na navbar

--- a/pages/home.html
+++ b/pages/home.html
@@ -15,7 +15,7 @@
 </head>
 
 <header>
-  <nav class="navbar navbar-expand-lg bg-light">
+  <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
       <a class="navbar-brand" href="home.html">Home</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,22 +54,49 @@
     <div class="container text-center">
         <div class="row row-cols-3 g-0">
           <div class="col">
-            <div class="cardsHome">
-              <h2>Polos</h2>
-              <a href="polos.html"><img src="../imgs/home/polosAzul.png" alt="polos" width="250px"></a>
-            </div>
+            <a href="polos.html">
+              <div class="cardsHome">
+                <div class="row row-cols-2">
+                  <div class="col">
+                    <h2>3</h2>
+                    <p>Polos<br> cadastrados</p>
+                  </div>
+                  <div class="col">
+                    <img src="../imgs/home/polos.png" alt="polos" width="120px">
+                  </div>
+                </div>
+              </div>
+            </a>
           </div>
           <div class="col">
-            <div class="cardsHome">
-              <h2>Alunos</h2>
-              <a href="alunos.html"><img src="../imgs/home/alunosAzul.png" alt="alunos" width="250px"></a>
-            </div>
+            <a href="alunos.html">
+              <div class="cardsHome"  style="background-color: blueviolet">
+                <div class="row row-cols-2">
+                  <div class="col">
+                    <h2>1</h2>
+                    <p>Aluno<br> cadastrado</p>
+                  </div>
+                  <div class="col">
+                    <img src="../imgs/home/alunos.png" alt="aluno" width="120px">
+                  </div>
+                </div>
+              </div>
+            </a>
           </div>
           <div class="col">
-            <div class="cardsHome">
-              <h2>Funcionários</h2>
-              <a href="funcionarios.html"><img src="../imgs/home/funcionariosAzul.png" alt="funcionarios" width="250px"></a>
-            </div>
+            <a href="funcionarios.html">
+              <div class="cardsHome" style="background-color: orange;">
+                <div class="row row-cols-2">
+                  <div class="col">
+                    <h2>1</h2>
+                    <p>Funcionário<br> cadastrado</p>
+                  </div>
+                  <div class="col">
+                    <img src="../imgs/home/funcionarios.png" alt="polos" width="120px">
+                  </div>
+                </div>
+              </div>
+            </a>
           </div>
         </div>
       </div>
