Ajustes na tela home + favicon adicionado na tela de recuperação de senha

--- a/pages/home.html
+++ b/pages/home.html
@@ -58,11 +58,12 @@
               <div class="cardsHome">
                 <div class="row row-cols-2">
                   <div class="col">
-                    <h2>3</h2>
+                    <br>
+                    <h3>3</h3>
                     <p>Polos<br> cadastrados</p>
                   </div>
                   <div class="col">
-                    <img src="../imgs/home/polos.png" alt="polos" width="120px">
+                    <img src="../imgs/home/polos.png" alt="polos" width="100%">
                   </div>
                 </div>
               </div>
@@ -73,11 +74,12 @@
               <div class="cardsHome"  style="background-color: blueviolet">
                 <div class="row row-cols-2">
                   <div class="col">
-                    <h2>1</h2>
+                    <br>
+                    <h3>1</h3>
                     <p>Aluno<br> cadastrado</p>
                   </div>
                   <div class="col">
-                    <img src="../imgs/home/alunos.png" alt="aluno" width="120px">
+                    <img src="../imgs/home/alunos.png" alt="aluno" width="100%">
                   </div>
                 </div>
               </div>
@@ -88,11 +90,12 @@
               <div class="cardsHome" style="background-color: orange;">
                 <div class="row row-cols-2">
                   <div class="col">
-                    <h2>1</h2>
+                    <br>
+                    <h3>1</h3>
                     <p>Funcionário<br> cadastrado</p>
                   </div>
                   <div class="col">
-                    <img src="../imgs/home/funcionarios.png" alt="polos" width="120px">
+                    <img src="../imgs/home/funcionarios.png" alt="polos" width="100%">
                   </div>
                 </div>
               </div>
