Adicionado logo da empresa no rodapé + alteração nos ícones na home

--- a/pages/alunos.html
+++ b/pages/alunos.html
@@ -197,7 +197,8 @@
 </body>
 
 <footer>
-    GCEAD<br>2022
+  <span id="textoFooter">GCEAD<br>2022</span>
+  <img id="logoFooter" src="../imgs/logo/debughop.png" alt="debughop" width="7%">
 </footer>
 
 </html>
