--- a/pages/home.html
+++ b/pages/home.html
@@ -59,7 +59,7 @@
                 <div class="row row-cols-2">
                   <div class="col">
                     <br>
-                    <h3>3</h3>
+                    <h3>2</h3>
                     <p>Polos<br> cadastrados</p>
                   </div>
                   <div class="col">
@@ -109,7 +109,8 @@
 </body>
 
 <footer>
-    GCEAD<br>2022
+    <span id="textoFooter">GCEAD<br>2022</span>
+    <img id="logoFooter" src="../imgs/logo/debughop.png" alt="debughop" width="7%">
 </footer>
 
 </html>
