--- a/pages/funcionarios.html
+++ b/pages/funcionarios.html
@@ -157,7 +157,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
 <footer>
-    GCEAD<br>2022
+  <span id="textoFooter">GCEAD<br>2022</span>
+  <img id="logoFooter" src="../imgs/logo/debughop.png" alt="debughop" width="7%">
 </footer>
 
 </html>
