--- a/pages/polos.html
+++ b/pages/polos.html
@@ -6,6 +6,11 @@
     <title>Polos</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" href="../imgs/favicon.jpg" type="image/x-icon">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Montserrat&display=swap" rel="stylesheet">
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 
@@ -83,7 +88,8 @@
 </body>
 
 <footer>
-    GCEAD<br>2022
+  <span id="textoFooter">GCEAD<br>2022</span>
+  <img id="logoFooter" src="../imgs/logo/debughop.png" alt="debughop" width="7%">
 </footer>
 
 </html>
