--- a/pages/funcionarios.html
+++ b/pages/funcionarios.html
@@ -42,6 +42,11 @@
           <ul class="dropdown-menu dropdown-menu-end">
             <li><a class="dropdown-item" href="#">Ver perfil</a></li>
             <li><a class="dropdown-item" href="../index.html">Sair</a></li>
+            <li>
+              <div class="form-check form-switch" id="switchTema">
+                <input class="form-check-input trocaCor" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+              </div>
+            </li>
           </ul>
         </li>
       </div>
@@ -155,7 +160,7 @@
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-
+<script src="../js/trocaCor.js"></script>
 <footer>
   <span id="textoFooter">GCEAD<br>2022</span>
   <img id="logoFooter" src="../imgs/logo/debughop.png" alt="debughop" width="7%">
