--- a/pages/polos.html
+++ b/pages/polos.html
@@ -32,6 +32,11 @@
           <ul class="dropdown-menu dropdown-menu-end">
             <li><a class="dropdown-item" href="#">Ver perfil</a></li>
             <li><a class="dropdown-item" href="../index.html">Sair</a></li>
+            <li>
+              <div class="form-check form-switch" id="switchTema">
+                <input class="form-check-input trocaCor" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+              </div>
+            </li>
           </ul>
         </li>
       </div>
@@ -85,7 +90,8 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-</body>
+    <script src="../js/trocaCor.js"></script>
+  </body>
 
 <footer>
   <span id="textoFooter">GCEAD<br>2022</span>
