--- a/pages/home.html
+++ b/pages/home.html
@@ -42,10 +42,8 @@
           <ul class="dropdown-menu dropdown-menu-end">
             <li><a class="dropdown-item" href="#">Ver perfil</a></li>
             <li><a class="dropdown-item" href="../index.html">Sair</a></li>
-            <li>
-              <div class="form-check form-switch" id="switchTema">
-                <input class="form-check-input trocaCor" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-              </div>
+            <li class="form-check form-switch" id="switchTema">
+              <input class="form-check-input trocaTema" type="checkbox" role="switch" id="flexSwitchCheckDefault">
             </li>
           </ul>
         </li>
@@ -111,7 +109,7 @@
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-  <script src="../js/trocaCor.js"></script>
+  <script src="../js/trocaTema.js"></script>
 </body>
 
 <footer>
