--- a/pages/polos.html
+++ b/pages/polos.html
@@ -34,7 +34,7 @@
             <li><a class="dropdown-item" href="../index.html">Sair</a></li>
             <li>
               <div class="form-check form-switch" id="switchTema">
-                <input class="form-check-input trocaCor" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                <input class="form-check-input trocaTema" type="checkbox" role="switch" id="flexSwitchCheckDefault">
               </div>
             </li>
           </ul>
@@ -90,7 +90,7 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    <script src="../js/trocaCor.js"></script>
+    <script src="../js/trocaTema.js"></script>
   </body>
 
 <footer>
