Adicionado logo na tela login + ajustes na tela home

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body style="background-color: whitesmoke;">
     <div class="container text-center divLogin">
+        <img src="imgs/logo/gceadazullogoa.png" alt="gceadlogo" width="35%" style="margin: auto;transform: translateY(-100%);">
         <div class="row">
             <div class="col">
                 <h1>Login</h1><br>
@@ -29,7 +30,7 @@
                 <div>
                     <h1>Bem-vind@</h1><br>
                     <p>Faça login para acessar o sistema <br> de gerenciamento da Católica EAD</p>
-                    <img src="imgs/home/alunosAzulr.png" alt="logo" width="250px">
+                    <img src="imgs/home/alunosAzulr.png" alt="logo" width="40%">
                 </div>
             </div>
         </div>
