--- a/pages/funcionarios.html
+++ b/pages/funcionarios.html
@@ -15,7 +15,7 @@
 </head>
 
 <header>
-  <nav class="navbar navbar-expand-lg">
+  <nav class="navbar navbar-expand-lg light">
     <div class="container-fluid">
       <a class="navbar-brand" href="home.html">Home</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,7 +54,7 @@
   </nav>
 </header>
 
-<body>
+<body class="light">
   <!-- modal de cadastro do funcionario -->
   <div class="modal fade" id="addFuncionario" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
@@ -124,7 +124,7 @@
     <div class="overflow-auto">
       <div class="column">  
         <div class="m-2 ">
-          <table class="table" style="color:#0478D9">
+          <table class="table light" style="color:#0478D9">
             <thead style="text-align: center;">
               <th scope="col" style='text-align:center'>Nome</th>
               <th scope="col" style='text-align:center'>Cargo</th>
@@ -160,10 +160,11 @@
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-<script src="../js/trocaTema.js"></script>
-<footer>
+
+<footer class="light">
   <span id="textoFooter">GCEAD<br>2022</span>
   <img id="logoFooter" src="../imgs/logo/debughop.png" alt="debughop" width="7%">
 </footer>
 
+<script src="../js/trocaTema.js"></script>
 </html>
