--- a/pages/polos.html
+++ b/pages/polos.html
@@ -15,7 +15,7 @@
 </head>
 
 <header>
-  <nav class="navbar navbar-expand-lg">
+  <nav class="navbar navbar-expand-lg light">
     <div class="container-fluid">
       <a class="navbar-brand" href="">Home</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,7 +44,7 @@
   </nav>
 </header>
 
-<body>
+<body class="light">
     <div id="divPolos">
       <div class="container text-center">
           <div class="row row-cols-3">
@@ -90,12 +90,13 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    <script src="../js/trocaTema.js"></script>
+
   </body>
 
-<footer>
+<footer class="light">
   <span id="textoFooter">GCEAD<br>2022</span>
   <img id="logoFooter" src="../imgs/logo/debughop.png" alt="debughop" width="7%">
 </footer>
 
+<script src="../js/trocaTema.js"></script>
 </html>
