--- a/pages/home.html
+++ b/pages/home.html
@@ -112,8 +112,7 @@
 </body>
 
 <footer class="light">
-    <span id="textoFooter">GCEAD<br>2022</span>
-    <img id="logoFooter" src="../imgs/logo/debughop.png" alt="debughop" width="7%">
+  <img id="logoFooter" src="../imgs/logo/debughop.png" alt="debughop" width=100rem">
 </footer>
 <script src="../js/trocaTema.js"></script>
 </html>
