--- a/pages/funcionarios.html
+++ b/pages/funcionarios.html
@@ -162,8 +162,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
 <footer class="light">
-  <span id="textoFooter">GCEAD<br>2022</span>
-  <img id="logoFooter" src="../imgs/logo/debughop.png" alt="debughop" width="7%">
+  <img id="logoFooter" src="../imgs/logo/debughop.png" alt="debughop" width=100rem">
 </footer>
 
 <script src="../js/trocaTema.js"></script>
