--- a/pages/polos.html
+++ b/pages/polos.html
@@ -17,7 +17,7 @@
 <header>
   <nav class="navbar navbar-expand-lg light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="">Home</a>
+      <a class="navbar-brand" href="">GCEAD</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -94,8 +94,7 @@
   </body>
 
 <footer class="light">
-  <span id="textoFooter">GCEAD<br>2022</span>
-  <img id="logoFooter" src="../imgs/logo/debughop.png" alt="debughop" width="7%">
+  <img id="logoFooter" src="../imgs/logo/debughop.png" alt="debughop" width=100rem">
 </footer>
 
 <script src="../js/trocaTema.js"></script>
